# roxybrowser-manager

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
PRD/: GitHub_CI_CD流程设计.md  RoxyBrowser_Manager_实现计划.md  RoxyBrowser快速切换用户可行性调研报告.md  RoxyBrowser用户账户切换可行性调研报告.md  RoxyBrowser窗口名称与数据文件夹映射关系分析.md  Windows开发计划.md  roxy-browser-profile-manager项目分析.md  优化进程停止等待机制.md  关闭按钮最小化到托盘.md  备份文件结构说明.md  导入导出文件夹选择器.md  窗口转移功能可行性分析.md  自定义安装路径支持优化计划.md
src/: App 2.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  process (SFConflict yangf1023 2026-01-23-15-47-36).rs  process.rs  profile.rs  settings.rs
src-tauri/src/models/: user.rs
src/components/: AddUserWizard.tsx  Dashboard.tsx  SettingsModal.tsx  UserCard.tsx
src/stores/: useStore.ts
src/types/: settings.ts
temp/: build_log.txt  rx_profiles_2026-02-04 08_30_10.txt
