[package]
name = "roxybrowser-manager"
version = "1.0.0"
description = "RoxyBrowser 多账户管理与切换工具"
authors = ["You"]
license = "MIT"
edition = "2021"

[lib]
name = "roxybrowser_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.31"
dirs = "5"
chrono = "0.4"
